--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -65,6 +65,7 @@ p {
 
 #home {
   margin-top: 50px;
+  height: 100vh;
 }
 
 .navigation-bar {
@@ -190,3 +191,33 @@ p {
   }
 
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  z-index: 2;
+}
+.cards {
+  margin-left: 100px;
+  overflow: hidden;
+}
+.card {
+  height: 600px;
+  width: 1200px;
+  margin-bottom: 50px;
+  background: white;
+  font-size: 36px;
+}
+.card:first-child {
+  box-shadow: 0px 0px 30px 3px rgba(0, 0, 0, 0.05);
+}
+
+#about {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: #D62C2C;
+  z-index: 3;
+}
+
