--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -95,6 +95,7 @@ p {
 
 .button-dark .border {
   padding: 0.4vw;
+  margin: 0.1vw;
   border-radius: 0.208vw;
   background: 
       linear-gradient(90deg, var(--color-darkblue) 50%, transparent 0) repeat-x,
@@ -103,7 +104,7 @@ p {
       linear-gradient(0deg, var(--color-darkblue) 50%, transparent 0) repeat-y;
       background-size: 0.521vw 0.104vw, 0.521vw 0.104vw, 0.104vw 0.521vw, 0.104vw 0.521vw;
       background-position: 0 0, 0 100%, 0 0, 100% 0;
-      animation: linearGradientMove .3s infinite linear;
+      animation: linearGradientMove .5s infinite linear;
 
       &:hover {
         animation: linearGradientStop .3s infinite linear;
@@ -132,17 +133,7 @@ p {
   font-size: 1.042vw;
   line-height: 1vw;
   overflow: hidden;
-  opacity: 1;
-  animation: blink 4s ease-in-out infinite;
 }
-
-/*@keyframes blink {
-  0% { opacity: 1; }
-  15% { opacity: 0.85; }
-  50% { opacity: 1; }
-  80% { opacity: 0.8; }
-  100% { opacity: 1; }
-}*/
 
 .button-dark p {
   color: var(--color-lightfont);
@@ -150,7 +141,6 @@ p {
   align-items: center;
   justify-content: center;
   font-weight: 550;
-  
 }
 
 /*Navigation Menu Styling*/
@@ -318,8 +308,8 @@ p {
       flex: 30%;
 
       img {
-        width: 8vw;
-      height: auto;
+        width: 10vw;
+        height: auto;
       }
     }
 
@@ -347,6 +337,7 @@ p {
 
       .project-description {
         margin: 1vw;
+        flex: 50%;
       }
       .button-dark {
         display: flex;
@@ -369,7 +360,7 @@ p {
   z-index: 3;
 }
 
-/* CSS */
+/* Custom cursor */
 .cursor {
   width: 50px;
   height: 50px;
@@ -404,7 +395,7 @@ p {
 .hover {
   background-color: var(--color-red);
   opacity: 0.5;
-  z-index: 1;
+  z-index: 900;
 }
 
 .cursorinnerhover {
