--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -4,6 +4,7 @@
   overflow-x: hidden;
   box-sizing: border-box;
   cursor: none;
+  
 }
 
 :root {
@@ -77,6 +78,24 @@ bg::before {
   z-index: -1;
 }
 
+bg-b {
+  display: inline-block;
+  width: auto;
+  position: relative;
+  z-index: 1;
+}
+
+bg-b::before {
+  content: "";
+  position: absolute;
+  top: 0; /* Adjust this value to move the background higher */
+  left: 0;
+  right: 0;
+  height: 70%; /* Adjust this value to control the height of the background */
+  background: #577386;
+  z-index: -1;
+}
+
 label {
   font-family: "Lato", sans-serif;
   font-weight: 600;
@@ -111,6 +130,24 @@ p {
     }
 }
 
+.button-light .border {
+  padding: 0.4vw;
+  margin: 0.1vw;
+  border-radius: 0.208vw;
+  background: 
+      linear-gradient(90deg, var(--color--beige) 50%, transparent 0) repeat-x,
+      linear-gradient(90deg, var(--color--beige) 50%, transparent 0) repeat-x,
+      linear-gradient(0deg, var(--color--beige) 50%, transparent 0) repeat-y,
+      linear-gradient(0deg, var(--color--beige) 50%, transparent 0) repeat-y;
+      background-size: 0.521vw 0.104vw, 0.521vw 0.104vw, 0.104vw 0.521vw, 0.104vw 0.521vw;
+      background-position: 0 0, 0 100%, 0 0, 100% 0;
+      animation: linearGradientMove .5s infinite linear;
+
+      &:hover {
+        animation: linearGradientStop .3s infinite linear;
+    }
+}
+
 @keyframes linearGradientMove {
   100% {
       background-position: 0.521vw 0, -0.521vw 100%, 0 -0.521vw, 100% 0.521vw;
@@ -135,12 +172,33 @@ p {
   overflow: hidden;
 }
 
+.button-light .background {
+  background-color: var(--color--beige);
+  padding: 0.5vw;
+  border-radius: 0.208vw;
+  width: 9vw;
+  height: 2vw;
+  font-size: 1.042vw;
+  line-height: 1vw;
+  overflow: hidden;
+}
+
 .button-dark p {
   color: var(--color-lightfont);
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.button-light p {
+  color: var(--color-darkblue);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: 550;
+  font-family: "Roboto Condensed", sans-serif;
+  
 }
 
 /*Navigation Menu Styling*/
@@ -358,6 +416,50 @@ p {
   height: 100vh;
   background-color: var(--color-darkblue);
   z-index: 3;
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.about-heading {
+  margin-top: 5.208vw;
+  display: flex;
+  align-items: end;
+  flex: 40%;
+  flex-direction: column;
+
+  img {
+    position: absolute;
+    display: flex;
+    margin: -4vw;
+    width: 22vw;
+    height: auto;
+  }
+}
+
+nav {
+  overflow: hidden;
+}
+
+.about-information {
+  margin-top: 5.208vw;
+  display: flex;
+  flex: 60%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  .about-text {
+    color: #FAFAFA;
+    width: 75%;
+  }
+}
+
+.about-information .button {
+  margin-top: 2vw;
+  width: 75%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 /* Custom cursor */
@@ -403,5 +505,12 @@ p {
   height: 50px;
   opacity: 0.9;
   background-color: var(--color-red);
+}
+
+footer {
+  background-color: red;
+  width: 100%;
+  height: 7.813vw;
+  z-index: 999;
 }
 
