--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -209,9 +209,9 @@ p {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-left: 25px;
-  padding-right: 25px;
-  height: 50px;
+  padding-left: 1.302vw;
+  padding-right: 1.302vw;
+  height: 2.604vw;
 
   ul {
     list-style: none;
@@ -221,7 +221,7 @@ p {
     justify-content: flex-end;
     
     li {
-      margin-left: 25px;
+      margin-left: 1.302vw;
     }
   }
 
@@ -230,7 +230,7 @@ p {
     flex: 5%;
 
     img {
-      height: 25px;
+      height: 1.302vw;
       width: auto;
     }
   }
@@ -238,7 +238,7 @@ p {
 
 /*Landing Section Styling*/
 #home {
-  margin-top: 50px;
+  margin-top: 2.604vw;
   height: 100vh;
 }
 
@@ -268,7 +268,7 @@ p {
   .label {
     display: flex;
     flex: 5%;
-    margin-left: 20px;
+    margin-left: 1.042vw;
     margin-top: 1.2vw;
     align-items: start;
     justify-content: start;
@@ -308,7 +308,7 @@ p {
   .label {
     display: flex;
     flex: 5%;
-    margin-right: 20px;
+    margin-right: 1.042vw;
     align-items: end;
     justify-content: end;
     
@@ -330,7 +330,7 @@ p {
     display: flex;
     justify-content: end;
     align-items: end;
-    margin: 20px;
+    margin: 1.042vw;
     flex: 50%;
     margin-right: 5%;
   }
@@ -353,9 +353,9 @@ p {
     flex-direction: row;
     height: 31.25vw;
     width: 62.5vw;
-    margin-bottom: 50px;
+    margin-bottom: 2.604vw;
     background: var(--color--beige);
-    font-size: 36px;
+    font-size: 1.875vw;
     border: 1.042vw solid var(--color-darkblue);
     border-radius: 1.302vw;
 
@@ -464,10 +464,10 @@ nav {
 
 /* Custom cursor */
 .cursor {
-  width: 50px;
-  height: 50px;
+  width: 2.604vw;
+  height: 2.604vw;
   border-radius: 50%;
-  border: 2px solid var(--color-darkblue);
+  border: 0.104vw solid var(--color-darkblue);
   transition: transform 0.2s ease-out;
   position: fixed;
   pointer-events: none;
@@ -478,8 +478,8 @@ nav {
 }
 
 .cursor2 {
-  width: 20px;
-  height: 20px;
+  width: 1.042vw;
+  height: 1.042vw;
   border-radius: 50%;
   background-color: var(--color-lightblue);
   opacity: 0.6;
@@ -501,16 +501,49 @@ nav {
 }
 
 .cursorinnerhover {
-  width: 50px;
-  height: 50px;
+  width: 2.604vw;
+  height: 2.604vw;
   opacity: 0.9;
   background-color: var(--color-red);
 }
 
 footer {
-  background-color: red;
+  background-color: #22333D;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 7.813vw;
   z-index: 999;
+
+  div {
+    display: flex;
+    flex-direction: row;
+    flex: 50%;
+  }
+
+  h3 {
+    color: var(--color-lightblue);
+    margin-left: 1.302vw;
+  }
+
+  .socials {
+    display: flex;
+    justify-content: end;
+    margin-right: 1.302vw;
+
+    nav {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: 1.302vw;
+      border: 0.521vw solid var(--color-red);
+      border-radius: 1.302vw;
+      width: 5.2vw;
+      height: 5.2vw;
+      background-color: var(--color-lightblue);
+    }
+  }
 }
 
