--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -608,6 +608,11 @@ footer {
     font-size: 12.5vw;
   }
 
+  h3 {
+    font-size: 10vw;
+    line-height: 10vw;
+  }
+
   label {
     font-size: 4vw;
   }
@@ -629,9 +634,11 @@ footer {
     width: 30vw;
     height: 8vw;
     font-size: 5vw;
-    line-height: 6vw;
+    line-height: 6.5vw;
     overflow: hidden;
   }
+
+  /*Home*/
 
   #home {
     padding: 5vw 5vw 0vw 5vw;
@@ -692,5 +699,44 @@ footer {
       margin-right: 5%;
     }
   
+  }
+
+  /*Projects*/
+
+  .container {
+    .cards {
+      margin-left: 0;
+      overflow: hidden;
+    }
+    .card {
+      display: flex;
+      flex-direction: row;
+      height: 125vw;
+      width: 90vw;
+  
+      .project-logo {
+        flex: 0;
+        visibility: hidden;
+      }
+  
+      .project-role {
+        margin-top: 13vw;
+  
+        p {
+          font-size: 6vw;
+        }
+      }
+  
+      .project-information {
+        margin-top: 3vw;
+  
+        .project-description {
+          margin: 5vw 5vw 1vw 5vw;
+        }
+      }
+    }
+    .card:first-child {
+      box-shadow: 0px 0px 30px 3px rgba(26, 4, 4, 0.05);
+    }
   }
 }
