--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -23,6 +23,11 @@ body {
   background-color: #FFFFFF;
 }
 
+a {
+  text-decoration: none;
+  overflow: hidden;
+}
+
 li {
   font-family: "Roboto Condensed", sans-serif;
   font-optical-sizing: auto;
@@ -585,6 +590,7 @@ footer {
     overflow: hidden;
 
     nav {
+      overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
